{{$NEXT}}

1.111970  2011-07-16 17:19:24 Europe/London

  * Use different Dist::Zilla author bundle

1.111940  2011-07-13 19:59:27 Europe/London

  * Fixes for NTLM Authentication (code and docs)

1.110911  2011-04-01 15:04:00 Europe/London

  * Apply the patch correctly this time.

1.110910  2011-04-01 14:27:58 Europe/London

  * Fixed a couple of doc typos (jaybuff via github)

1.103620  2010-12-28 00:15:12 Europe/London

  * Fix misspelt CalendarType (rt.cpan #56188)
  * Add note about possible Exchange 2010 issues (rt.cpan #55890)
  * Add server_version attribute (rt.cpan #61914)
  * Add support for NTLM Authentication (rt.cpan #56189 - Greg Shaw)
  * Add support for Impersonation (rt.cpan #56189 - Greg Shaw)

1.103610  2010-12-27 18:29:05 Europe/London

  * Port to Dist::Zilla

libews-client-perl (0.06) UNRELEASED; urgency=low

  * Add check for no items returned from server - thanks Mike M. 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Mar 2010 21:25:58 +0000

libews-client-perl (0.05) UNRELEASED; urgency=low

  * Added POD note about HTTP BasicAuth - thanks to Darren W. 

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 16 Mar 2010 19:48:47 +0000

libews-client-perl (0.04) UNRELEASED; urgency=low

  * Add Contacts retrieval.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Sun, 14 Mar 2010 22:59:03 +0000

libews-client-perl (0.03) UNRELEASED; urgency=low

  * Result set is an iterator, add MooseX::Iterator.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Tue, 23 Feb 2010 10:48:57 +0000

libews-client-perl (0.02) UNRELEASED; urgency=low

  * Add File::ShareDir dependency.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Feb 2010 21:43:19 +0000

libews-client-perl (0.01) UNRELEASED; urgency=low

  * Initial release on an unsuspecting world.

 -- Oliver Gorwits <oliver.gorwits@oucs.ox.ac.uk>  Mon, 22 Feb 2010 19:01:46 +0000