@@ -1,5 +1,9 @@
 name = EWS-Client
 copyright_holder = University of Oxford
 
+[Prereqs]
+Authen::NTLM = 0
+LWP::Authen::Ntlm = 0
+LWP::Protocol::https = 6.02
+
 [@Author::OLIVER]
-skip_deps = (?:LWP::Authen::Ntlm|Authen::NTLM)
