@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Add dependencies for HTTPS and NTLM support, always
+
 1.111970  2011-07-16 17:19:24 Europe/London
 
   * Use different Dist::Zilla author bundle
